apps/http-echo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-echo
  namespace: scida
spec: 
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
